updated environment file

--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - websockets=10.3
   - pip
   - pip:
-      - pywin32==304
+#      - pywin32==304
       - brainflow==5.2.1
       - pylsl==1.16.0
       - pyinstaller
